# docs/swagger.json
@@ -16,6 +16,32 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Retrieve overall health of the service",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "serviceHealth"
+                ],
+                "summary": "Retrieve overall health of the service",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.HealthCheck"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.HealthCheck"
+                        }
+                    }
+                }
+            }
+        },
         "/role": {
             "post": {
                 "security": [
@@ -659,6 +685,26 @@
             "properties": {
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "model.HealthCheck": {
+            "type": "object",
+            "properties": {
+                "db": {
+                    "type": "string"
+                },
+                "diskSpace": {
+                    "type": "string"
+                },
+                "diskWritable": {
+                    "type": "string"
+                },
+                "health": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
                 }
             }
         },
